# TinyCore

./: .gitignore  .gitmodules  TinyCore.gprj  config.json  gen.py  opcodes.txt  render_gds.py  run.sh  sim.v  view.sh
arduino_emulator/: Makefile  compile_flags.txt  debug.c  main.c  program.c  upload.py
arduino_emulator/include/: debug.h
assembler/: Makefile  generator.cpp  main.cpp
assembler/include/: cpu.h  generator.h
fpga/: TinyCore.cst  prescaler.v  shift.v  top.v
src/: alu.v  core.v  ram.v
test/: Makefile  blink.asm  fib.asm  fib2.asm  io.asm  io_mirror.asm  memory.asm  memory_im.asm  nand.asm  test.asm
uploader/: CMakeLists.txt  build.sh  main.c  upload.py
